# edk

./: .flake8  .pre-commit-config.yaml  .readthedocs.yml  README.md  SPECIFICATION.md  copier.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  semantic.yml
.github/workflows/: codeql-analysis.yml  docs-preview.yml  release.yml  test.yml
cookiecutter/wrapper-template/: cookiecutter.json  cookiecutter.tests.yml
cookiecutter/wrapper-template/{{cookiecutter.wrapper_id}}/: pyproject.toml
cookiecutter/wrapper-template/{{cookiecutter.wrapper_id}}/{{cookiecutter.library_name}}/: __init__.py  extension.py  main.py  pass_through.py  wrapper.py
copier_template/: README.md.jinja  pyproject.toml.jinja
copier_template/{{library_name}}/: __init__.py.jinja  extension.py.jinja  main.py.jinja  pass_through.py.jinja
docs/: conf.py  getting_started.md  index.rst  reference.rst  specification.md
docs/_templates/: layout.html
docs/classes/: meltano.edk.extension.DescribeFormat.rst  meltano.edk.extension.ExtensionBase.rst  meltano.edk.process.Invoker.rst
meltano/edk/: __init__.py  extension.py  logging.py  models.py  process.py  types.py
tests/: test_meltano_edk.py  test_process.py
tests/cookiecutter/: test_cookiecutter.py
tests/copier_template/: test_generated.py
