[project]
name = "meltano.edk"
dynamic = [ "version" ]
description = "A framework for building Meltano extensions"
authors = [{ name = "Meltano Team and Contributors" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
maintainers = [{ name = "Meltano Team and Contributors" }]
keywords = [
    "Meltano",
    "Meltano Extension",
    "Meltano EDK",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "structlog>=21,<26",
    "PyYAML>=6,<7",
    "pydantic>=2,<3",
    "devtools>=0.9.0,<1",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "furo",
    "sphinx-copybutton",
    "myst-parser",
    "sphinx-autobuild",
]

[project.urls]
Homepage = "https://meltano.com"
Repository = "https://github.com/meltano/edk"
"Issue Tracker" = "https://github.com/meltano/edk/issues"
Twitter = "https://twitter.com/meltanodata/"
Changelog = "https://github.com/meltano/edk/blob/main/CHANGELOG.md"
Slack = "https://meltano.com/slack"
Youtube = "https://www.youtube.com/meltano"

[dependency-groups]
dev = [
    "copier>=8.1.0,<10.0",
    "pytest>=7.4.2,<9.0.0",
    "types-pyyaml>=6.0.12.4,<7",
    "mypy>=1.6,<2",
    "ruff>=0.5.0,<0.16",
    "typer>=0.6.1,<0.24.0",
]

[tool.hatch.build.targets.sdist]
include = ["meltano"]

[tool.hatch.build.targets.wheel]
include = ["meltano"]

[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "F",
  "B",
  "I",
  "ANN",
  "D",
  "UP",
  "SIM",
  "PERF",
  "FURB",
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"docs/**" = [
  "D",
]
"tests/**" = [
  "ANN201",
  "D",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = [
    "hatchling>=1,<2",
    "hatch-vcs",
]
build-backend = "hatchling.build"
