[tool.poetry]
name = "{{cookiecutter.wrapper_id}}"
version = "0.0.1"
description = "`{{cookiecutter.wrapper_id}}` is a Meltano utility extension."
authors = ["{{ cookiecutter.admin_name }}"]
license = "Apache 2.0"


packages = [
    { include = "{{cookiecutter.library_name}}" }
    # uncomment this if you want to include static assets
    # { include = "files_{{cookiecutter.wrapper_id}}.*" }
]

# If you need to include static assets with your extension, you can add them here.
# Under a directory path of "files_{{cookiecutter.wrapper_id}}/". These will be
# included in both the sdist and wheel by default.
#
# See https://python-poetry.org/docs/pyproject/#include-and-exclude for further
# details.
#include = [
#    {path = "files_{{cookiecutter.wrapper_id}}"}
#]

[tool.poetry.dependencies]
python = "<3.11,>=3.7"
structlog = "^21.2.0"
PyYAML = "^6.0.0"
pydantic = "^1.9.0"
click = "^8.1.3"
typer = "^0.6.1"
"meltano.edk"= {git = "https://github.com/meltano/edk.git", rev="main"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.scripts]
{{cookiecutter.cli_prefix}}_extension = '{{cookiecutter.library_name}}.main:app'
{{cookiecutter.cli_prefix}}_invoker = '{{cookiecutter.library_name}}.pass_through:pass_through_cli'
